<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.js.ghostleggame.data.dto.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activity.MainActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="설정"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_personnel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_personnel"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_personnel_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toRightOf="@id/tv_personnel"/>

        <TextView
            android:id="@+id/tv_winning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_winning"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toRightOf="@id/tv_personnel_num"/>

        <TextView
            android:id="@+id/tv_winning_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toRightOf="@id/tv_winning"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_shadow_mode"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintLeft_toRightOf="@id/tv_winning_num"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_reset"
            app:layout_constraintBottom_toTopOf="@id/btn_all_start"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_result_list"
            app:layout_constraintBottom_toTopOf="@id/btn_all_start"
            app:layout_constraintRight_toRightOf="parent"/>



        <Button
            android:id="@+id/btn_all_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_all_start"
            app:layout_constraintBottom_toTopOf="@id/ad"
            />
        <TextView
            android:id="@+id/ad"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="광고"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_winning"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>