<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <include
            android:id="@+id/header"
            layout="@layout/inc_header"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_gray"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                >
                <TextView
                    style="@style/textview_setting_vertical"
                    android:text="@string/setting_dark_mode"
                    />
                <Switch
                    style="@style/switch_setting"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/solid_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
                <TextView
                    style="@style/textview_setting_vertical"
                    android:text="@string/setting_sound"
                    />
                <Switch
                    style="@style/switch_setting"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/solid_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">
                <TextView
                    style="@style/textview_setting_vertical"
                    android:text="@string/setting_vibration"
                    />
                <Switch
                    style="@style/switch_setting"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/solid_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="4">
                <TextView
                    style="@style/textview_setting_horizontal"
                    android:text="@string/setting_game_speed"
                    />
                <SeekBar
                    style="@style/seekbar_setting"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>